@@ -88,6 +88,15 @@ public class VManaPool extends VDisplayArea {
         }
 
         @Override
+        public boolean twoFingerTap(float x, float y, int count) {
+            if (player.getLobbyPlayer() == GamePlayerUtil.getGuiPlayer()) {
+                //on two finger tap, keep using mana until it runs out or no longer can be put towards the cost
+                while (MatchUtil.getHumanController().useMana(colorCode)) {}
+            }
+            return true;
+        }
+
+        @Override
         public void draw(Graphics g) {
             float textHeight = FONT.getCapHeight();
             float gapY = textHeight / 4f;
